<resources>
    <string name="app_name">"Aly Fas5any "</string>
    <string name="slogan">No more need for paper Menus or taking orders on paper , its new century with great solutions</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="total">Total:</string>
    <string name="place_order">Place Order</string>
    <string name="title_activity_maps">Map</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="sign_in_name">Name</string>

    <string name="el_amer_factory">El Amer Factory</string>
    <string name="catalogue">Catalogue</string>
    <string name="cart">Cart</string>
    <string name="location">Location</string>
    <string name="sign_out">Sign out</string>
    <string name="call_us_now">Call us now</string>
    <string name="orders">Orders</string>
    <string name="order_updated">Your order was updated</string>
    <string name="address">Address</string>
    <string name="comment">comment</string>
    <string name="comment_order_view">comment: </string>
    <string name="select_action">Select the Action</string>
    <string name="update">Update</string>
    <string name="enter_address">\"Enter your address: \"</string>
    <string name="one_more_step">One more Step!</string>
    <string name="title_activity_home_actvity_m_v">HomeActvityMV</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="popular_categories">Popular Dishes</string>
    <string name="best_deals">Best Deals</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="rating_food">Rating Food</string>
    <string name="enter_review">Please enter your review</string>
    <string name="your_address">Please Enter Your Address</string>
    <string name="your_name">" Enter Your Name"</string>
    <string name="phone_number">Phone Number</string>
    <string name="order_by_piece">Order By</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="empty_cart">EMPTY CART</string>
    <string name="delete_item_from_cart">Delete item Success</string>
    <string name="clear_cart">clear Cart</string>
    <string name="clear_cart_success">Clear Cart Success</string>
    <string name="want_sign_out">\"Do you want to sign out ? \"</string>
    <string name="cancel">cancel</string>
    <string name="yes">yes</string>
    <string name="hi_user_name">\"Hi  \"</string>
    <string name="register">REGISTER</string>
    <string name="enter_your_name">Please Enter Your Name</string>
    <string name="enter_your_phone">Please Enter Your phone</string>
    <string name="register_success">congratulations ! Register Success</string>
    <string name="fill_all_info">Please fill all the information</string>
    <string name="you_already_registerd">You Already registered</string>
    <string name="fail_sign_in">Failed to sign in</string>
    <string name="already_sign_in">Already Login</string>
    <string name="not_available">Item Not Available</string>
    <string name="home_address">Home Address</string>
    <string name="other_address">Other Address</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="by_quantity_call">\"by quantity you will receive a call soon with prices \"</string>
    <string name="order_placed">Order Placed Successfully</string>
    <string name="order_date_view">Today at : 13:05:56 pm</string>
    <string name="order_number_view">Order number :</string>
    <string name="order_comment_view">Order comment:</string>
    <string name="status_placed_order_view">Status: </string>
    <string name="order_detail">Order Details</string>
    <string name="ok">ok</string>
    <string name="quantity_1">"Quatity : "</string>
    <string name="size_by_order">Order By :</string>
    <string name="price_per_kilo">Price per Kilo :</string>
    <string name="you_must_accept">"You Must Accept "</string>
    <string name="default_notification_channel_id">simpelexo_alyfas5anyclient_v3</string>
    <string name="order_placed_notfi_failed">Order was sent but failed in sending notification</string>
    <string name="update_order_success">Update Cart Success</string>
    <string name="add_to_cart_success">Add to cart success</string>
    <string name="thank_you">Thank You</string>
    <string name="update_cart_success">Update Cart Success</string>
    <string name="login_sucess">Login Success</string>
    <string name="what_did_you_like">what did you like ?</string>
    <string name="text_size">14</string>
    <string name="google_maps_key">AIzaSyBKheZgXHzi4ghmuahE1t3JhZSTggf72Z0</string>
    <string name="go_now">Go Now</string>
    <string name="marker_aly">Marker in Aly fas5any shop</string>
</resources>