<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_order"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            android:layout_gravity="center"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_order_date"
                android:text="@string/order_date_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/txt_order_number"
                android:text="@string/order_number_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                android:textStyle="italic"
                android:textColor="@android:color/holo_red_dark"/>

            <TextView
                android:id="@+id/txt_order_comment"
                android:text="@string/order_comment_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="12sp"
                android:textStyle="italic"
                android:textColor="@android:color/holo_red_dark"/>

            <TextView
                android:id="@+id/txt_order_status"
                android:text="@string/status_placed_order_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="12sp"
                android:textStyle="italic"
                android:textColor="@android:color/holo_red_dark"/>


        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>