<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp"
    android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

           <com.rengwuxian.materialedittext.MaterialEditText
               android:id="@+id/edt_address"
               android:hint="@string/address"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text=""
               android:textColor="@color/colorPrimary"
               android:textColorHint="@color/colorPrimary"
                android:textSize="34sp"
               android:inputType="text"
               app:met_baseColor="@color/colorPrimary"
               app:met_floatingLabel="highlight"
               app:met_primaryColor="@color/colorPrimary"
               app:met_singleLineEllipsis="true"

               />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <RadioButton
                    android:id="@+id/rdi_home_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/home_address"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:textColor="@color/colorPrimary"/>
                <RadioButton
                    android:id="@+id/rdi_other_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/other_address"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:textColor="@color/colorPrimary"/>
            </RadioGroup>
 <com.rengwuxian.materialedittext.MaterialEditText
               android:id="@+id/edt_comment"
               android:hint="@string/comment"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text=""
               android:textColor="@color/colorPrimary"
               android:textColorHint="@color/colorPrimary"
                android:textSize="34sp"
               android:inputType="textMultiLine"
               app:met_baseColor="@color/colorPrimary"
               app:met_floatingLabel="highlight"
               app:met_primaryColor="@color/colorPrimary"
               app:met_singleLineEllipsis="true"

               />


            <!--<TextView-->
            <!--android:id="@+id/order_name"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:gravity="center_vertical|start"-->
            <!--android:text="Name"-->
            <!--android:textAllCaps="true"-->
            <!--android:textStyle="italic" />-->


            <!--<TextView-->
            <!--android:id="@+id/order_food"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:gravity="center_vertical|start"-->
            <!--android:text="Order Food"-->
            <!--android:textAllCaps="true"-->
            <!--android:textStyle="italic" />-->

            <!--<TextView-->
            <!--android:id="@+id/order_total"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:gravity="center_vertical|start"-->
            <!--android:text="Order total"-->
            <!--android:textAllCaps="true"-->
            <!--android:textStyle="italic" />-->
        </LinearLayout>



</androidx.cardview.widget.CardView>